--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "dependencies": {
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
-    "react-scripts": "1.0.17"
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
